--- a/Shopping_Buy_All/Shopping_Buy_All/Shopping_Buy_All.csproj
+++ b/Shopping_Buy_All/Shopping_Buy_All/Shopping_Buy_All.csproj
@@ -48,6 +48,24 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ABMS\ABM Estado Civil\EstadoCivil_Delete.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="ABMS\ABM Estado Civil\EstadoCivil_Delete.designer.cs">
+      <DependentUpon>EstadoCivil_Delete.cs</DependentUpon>
+    </Compile>
+    <Compile Include="ABMS\ABM Estado Civil\EstadoCivil_Load.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="ABMS\ABM Estado Civil\EstadoCivil_Load.designer.cs">
+      <DependentUpon>EstadoCivil_Load.cs</DependentUpon>
+    </Compile>
+    <Compile Include="ABMS\ABM Estado Civil\EstadoCivil_Modify.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="ABMS\ABM Estado Civil\EstadoCivil_Modify.designer.cs">
+      <DependentUpon>EstadoCivil_Modify.cs</DependentUpon>
+    </Compile>
     <Compile Include="ABMS\ABM Productos\Product_Delete.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -96,10 +114,50 @@
     <Compile Include="ABMS\ABM Sexo\Sexo_Modify.Designer.cs">
       <DependentUpon>Sexo_Modify.cs</DependentUpon>
     </Compile>
+    <Compile Include="ABMS\ABM Tipo Documento\TipoDoc_Delete.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="ABMS\ABM Tipo Documento\TipoDoc_Delete.designer.cs">
+      <DependentUpon>TipoDoc_Delete.cs</DependentUpon>
+    </Compile>
+    <Compile Include="ABMS\ABM Tipo Documento\TipoDoc_Load.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="ABMS\ABM Tipo Documento\TipoDoc_Load.designer.cs">
+      <DependentUpon>TipoDoc_Load.cs</DependentUpon>
+    </Compile>
+    <Compile Include="ABMS\ABM Tipo Documento\TipoDoc_Modify.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="ABMS\ABM Tipo Documento\TipoDoc_Modify.designer.cs">
+      <DependentUpon>TipoDoc_Modify.cs</DependentUpon>
+    </Compile>
+    <Compile Include="ABMS\ABM Tipo Tarjeta\TipoTarjeta_Delete.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="ABMS\ABM Tipo Tarjeta\TipoTarjeta_Delete.designer.cs">
+      <DependentUpon>TipoTarjeta_Delete.cs</DependentUpon>
+    </Compile>
+    <Compile Include="ABMS\ABM Tipo Tarjeta\TipoTarjeta_Load.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="ABMS\ABM Tipo Tarjeta\TipoTarjeta_Load.designer.cs">
+      <DependentUpon>TipoTarjeta_Load.cs</DependentUpon>
+    </Compile>
+    <Compile Include="ABMS\ABM Tipo Tarjeta\TipoTarjeta_Modify.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="ABMS\ABM Tipo Tarjeta\TipoTarjeta_Modify.designer.cs">
+      <DependentUpon>TipoTarjeta_Modify.cs</DependentUpon>
+    </Compile>
     <Compile Include="Entidades\Cliente.cs" />
+    <Compile Include="Entidades\EstadoCivil.cs" />
     <Compile Include="Entidades\Producto.cs" />
+    <Compile Include="Entidades\Sexo.cs" />
     <Compile Include="Entidades\TipoComercio.cs" />
     <Compile Include="Entidades\Local.cs" />
+    <Compile Include="Entidades\TipoDocumento.cs" />
+    <Compile Include="Entidades\TipoTarjeta.cs" />
     <Compile Include="Entidades\User.cs" />
     <Compile Include="Logged\Logged.cs">
       <SubType>Form</SubType>
@@ -172,6 +230,15 @@
     <EmbeddedResource Include="ABMS\ABM Cliente\Client_Modify.resx">
       <DependentUpon>Client_Modify.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="ABMS\ABM Estado Civil\EstadoCivil_Delete.resx">
+      <DependentUpon>EstadoCivil_Delete.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="ABMS\ABM Estado Civil\EstadoCivil_Load.resx">
+      <DependentUpon>EstadoCivil_Load.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="ABMS\ABM Estado Civil\EstadoCivil_Modify.resx">
+      <DependentUpon>EstadoCivil_Modify.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="ABMS\ABM Productos\Product_Delete.resx">
       <DependentUpon>Product_Delete.cs</DependentUpon>
     </EmbeddedResource>
@@ -186,6 +253,24 @@
     </EmbeddedResource>
     <EmbeddedResource Include="ABMS\ABM Sexo\Sexo_Modify.resx">
       <DependentUpon>Sexo_Modify.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="ABMS\ABM Tipo Documento\TipoDoc_Delete.resx">
+      <DependentUpon>TipoDoc_Delete.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="ABMS\ABM Tipo Documento\TipoDoc_Load.resx">
+      <DependentUpon>TipoDoc_Load.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="ABMS\ABM Tipo Documento\TipoDoc_Modify.resx">
+      <DependentUpon>TipoDoc_Modify.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="ABMS\ABM Tipo Tarjeta\TipoTarjeta_Delete.resx">
+      <DependentUpon>TipoTarjeta_Delete.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="ABMS\ABM Tipo Tarjeta\TipoTarjeta_Load.resx">
+      <DependentUpon>TipoTarjeta_Load.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="ABMS\ABM Tipo Tarjeta\TipoTarjeta_Modify.resx">
+      <DependentUpon>TipoTarjeta_Modify.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Logged\Logged.resx">
       <DependentUpon>Logged.cs</DependentUpon>
@@ -261,8 +346,6 @@
     <Folder Include="ABMS\ABM Rubros\" />
     <Folder Include="ABMS\ABM Tarjetas\" />
     <Folder Include="ABMS\ABM TipoComercio\" />
-    <Folder Include="ABMS\ABM TipoDocumento\" />
-    <Folder Include="ABMS\ABM TipoEstadoCivil\" />
     <Folder Include="ABMS\ABM TipoVehiculo\" />
     <Folder Include="ABMS\ABM Usuario\" />
     <Folder Include="ABMS\ABM Vehiculos\" />
