Fixes de Usuario e Inicio de Sesión
Usuario no es case sensitive
Contraseña es case sensitive
No se usa contraseña en plain text, se usa hash en SHA256

--- a/Shopping_Buy_All/Shopping_Buy_All/Shopping_Buy_All.csproj
+++ b/Shopping_Buy_All/Shopping_Buy_All/Shopping_Buy_All.csproj
@@ -102,6 +102,7 @@
     <Compile Include="Entidades\Local.cs" />
     <Compile Include="Entidades\TipoVehiculo.cs" />
     <Compile Include="Entidades\User.cs" />
+    <Compile Include="Entidades\Utils.cs" />
     <Compile Include="Logged.cs">
       <SubType>Form</SubType>
     </Compile>
