--- a/Shopping_Buy_All/Shopping_Buy_All/Shopping_Buy_All.csproj
+++ b/Shopping_Buy_All/Shopping_Buy_All/Shopping_Buy_All.csproj
@@ -108,11 +108,23 @@
     <Compile Include="ABMS\ABM TipoVehiculo\VehicleType_Modify.Designer.cs">
       <DependentUpon>VehicleType_Modify.cs</DependentUpon>
     </Compile>
+    <Compile Include="ABMS\ABM Vehiculos\Vehicle_Delete.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="ABMS\ABM Vehiculos\Vehicle_Delete.Designer.cs">
+      <DependentUpon>Vehicle_Delete.cs</DependentUpon>
+    </Compile>
     <Compile Include="ABMS\ABM Vehiculos\Vehicle_Load.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="ABMS\ABM Vehiculos\Vehicle_Load.Designer.cs">
       <DependentUpon>Vehicle_Load.cs</DependentUpon>
+    </Compile>
+    <Compile Include="ABMS\ABM Vehiculos\Vehicle_Modify.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="ABMS\ABM Vehiculos\Vehicle_Modify.Designer.cs">
+      <DependentUpon>Vehicle_Modify.cs</DependentUpon>
     </Compile>
     <Compile Include="Entidades\Automovil.cs" />
     <Compile Include="Entidades\Cliente.cs" />
@@ -171,8 +183,14 @@
     <EmbeddedResource Include="ABMS\ABM TipoVehiculo\VehicleType_Modify.resx">
       <DependentUpon>VehicleType_Modify.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="ABMS\ABM Vehiculos\Vehicle_Delete.resx">
+      <DependentUpon>Vehicle_Delete.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="ABMS\ABM Vehiculos\Vehicle_Load.resx">
       <DependentUpon>Vehicle_Load.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="ABMS\ABM Vehiculos\Vehicle_Modify.resx">
+      <DependentUpon>Vehicle_Modify.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Logged.resx">
       <DependentUpon>Logged.cs</DependentUpon>
