--- a/Shopping_Buy_All/Shopping_Buy_All/Shopping_Buy_All.csproj
+++ b/Shopping_Buy_All/Shopping_Buy_All/Shopping_Buy_All.csproj
@@ -168,6 +168,12 @@
     <Compile Include="ABMS\ABM TipoVehiculo\VehicleType_Modify.designer.cs">
       <DependentUpon>VehicleType_Modify.cs</DependentUpon>
     </Compile>
+    <Compile Include="ABMS\ABM Usuario\User_Load.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="ABMS\ABM Usuario\User_Load.designer.cs">
+      <DependentUpon>User_Load.cs</DependentUpon>
+    </Compile>
     <Compile Include="Entidades\Cliente.cs" />
     <Compile Include="Entidades\EstadoCivil.cs" />
     <Compile Include="Entidades\Producto.cs" />
@@ -178,6 +184,7 @@
     <Compile Include="Entidades\TipoTarjeta.cs" />
     <Compile Include="Entidades\TipoVehiculo.cs" />
     <Compile Include="Entidades\User.cs" />
+    <Compile Include="Entidades\Utils.cs" />
     <Compile Include="Logged\Logged.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -330,6 +337,9 @@
     <EmbeddedResource Include="ABMS\ABM TipoVehiculo\VehicleType_Modify.resx">
       <DependentUpon>VehicleType_Modify.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="ABMS\ABM Usuario\User_Load.resx">
+      <DependentUpon>User_Load.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Logged\Logged.resx">
       <DependentUpon>Logged.cs</DependentUpon>
     </EmbeddedResource>
@@ -419,7 +429,6 @@
     <Folder Include="ABMS\ABM Rubros\" />
     <Folder Include="ABMS\ABM Tarjetas\" />
     <Folder Include="ABMS\ABM TipoComercio\" />
-    <Folder Include="ABMS\ABM Usuario\" />
     <Folder Include="ABMS\ABM Vehiculos\" />
   </ItemGroup>
   <ItemGroup>
