--- a/Shopping_Buy_All/Shopping_Buy_All/Shopping_Buy_All.csproj
+++ b/Shopping_Buy_All/Shopping_Buy_All/Shopping_Buy_All.csproj
@@ -482,6 +482,7 @@
     <Folder Include="ABMS\ABM Rubros\" />
     <Folder Include="ABMS\ABM Tarjetas\" />
     <Folder Include="ABMS\ABM Vehiculos\" />
+    <Folder Include="ABMS\AccesoADatos\" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\users.png" />
