--- a/Shopping_Buy_All/Shopping_Buy_All/Shopping_Buy_All.csproj
+++ b/Shopping_Buy_All/Shopping_Buy_All/Shopping_Buy_All.csproj
@@ -210,6 +210,8 @@
     <Compile Include="ABMS\ABM Usuario\User_Load.designer.cs">
       <DependentUpon>User_Load.cs</DependentUpon>
     </Compile>
+    <Compile Include="ABMS\AccesoADatos\AD_Local.cs" />
+    <Compile Include="ABMS\AccesoADatos\AD_TipoComercio.cs" />
     <Compile Include="Entidades\Cliente.cs" />
     <Compile Include="Entidades\EstadoCivil.cs" />
     <Compile Include="Entidades\Producto.cs" />
@@ -482,7 +484,6 @@
     <Folder Include="ABMS\ABM Rubros\" />
     <Folder Include="ABMS\ABM Tarjetas\" />
     <Folder Include="ABMS\ABM Vehiculos\" />
-    <Folder Include="ABMS\AccesoADatos\" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\users.png" />
